# Dshh

./: .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  edit.rs  ftp.rs  lib.rs  local.rs  localfs.rs  logs.rs  main.rs  scp.rs  serial.rs  sftp.rs  ssh.rs  telnet.rs  tunnel.rs  update.rs
src/components/: BottomDock.tsx  ConnectionModal.tsx  ErrorBoundary.tsx  FileBrowser.tsx  LocalLauncher.tsx  LocalPane.tsx  QuickCommandsModal.tsx  ScpModal.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  TerminalView.tsx  TunnelsModal.tsx  UnlockModal.tsx  UpdateToast.tsx  Workspace.tsx
src/lib/: api.ts  fileIcons.tsx  highlight.ts  terminalRegistry.ts  types.ts  utils.ts
updates/design_handoff_dshh_website/: Dshh Site.dc.html  README.md
updates/design_handoff_dshh_website/explorations/: Dshh Website.dc.html
website/: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
website/src/: App.tsx  config.ts  hooks.ts  lib.ts  main.ts  main.tsx  styles.css
website/src/components/: AppMockup.tsx  Changelog.tsx  Docs.tsx  DownloadSection.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Protocols.tsx  UpdateDemo.tsx
